Fix: Top and bottom spacing; better instructions.

--- a/CodeChat/css/CodeChatEditor.css
+++ b/CodeChat/css/CodeChatEditor.css
@@ -9,6 +9,14 @@
     text-decoration: underline;
 }
 
+/* <p>Provide space at the top and bottom of a document, so that the TinyMCE menu bar doesn't overlay text. We want to avoid this:<p>
+<p><img src="../TinyMCE-menu-overlay.png"></p> */
+#CodeChat-top,
+#CodeChat-bottom
+{
+    height: 5rem;
+}
+
 /* Match the ACE Editor gutter. */
 .CodeChat-ACE-gutter-padding
 {
